01_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linux
  namespace: default
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command:
     - sleep
     - "3600"
  - name: alpine
    image: alpine:latest
    command:
     - sleep
     - "3600"
