01_pod_busybox-curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-curl
  namespace: default
spec:
  containers:
  - name: busybox-curl
    image: yauritux/busybox-curl:latest
    command:
     - sleep
     - "3600"
