03_service_loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx-svc
spec:
  type: LoadBalancer
  ports:
  - name: nginx-svc
    port: 80
  selector:
    app: nginx
