04_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
  - host: environments.katacoda.com
    http: 
      paths:
      - backend:
          serviceName: nginx-svc
          servicePort: 80
